--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~11.2.0",
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
+    "@ngneat/until-destroy": "^8.0.0",
     "rxjs": "~6.6.0",
     "tailwindcss": "^2.0.3",
     "tslib": "^2.0.0",
